# mosir-sdk-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  Taskfile.yaml  pyproject.toml
scripts/: generate_operations.py  smoke.py
src/mosir_sdk/: __init__.py  _generated_client.py  _operations.py  client.py  exceptions.py  py.typed
src/mosir_sdk_python/: __init__.py
tests/: test_client.py
