[project]
name = "mosir-sdk-python"
version = "0.1.0"
description = "Python SDK for the Mosir public GraphQL API"
readme = "README.md"
authors = [
    { name = "catLee", email = "leemiyinghao@gmx.com" }
]
requires-python = ">=3.12"
license = "LGPL-3.0-or-later"
keywords = ["graphql", "httpx", "mosir", "sdk", "sse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "graphql-core>=3.2.8",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://beta.mosir.app"
Repository = "https://github.com/mosir-social/mosir-sdk-python"
Issues = "https://github.com/mosir-social/mosir-sdk-python/issues"
Documentation = "https://github.com/mosir-social/mosir-sdk-python#readme"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mosir_sdk*", "mosir_sdk_python*"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pyright]
include = ["src", "scripts"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
